@@ -3,6 +3,7 @@
   SIGHUP will close server sockets but continue serving open requests
   add man page
   fix HTTP pipelining fd leak
+  add broken-symlink-redirect like fnord does (read README.redirect)
 
 0.4:
   add primitive FTP support (default: enabled; disable with -F!)
